# orion

./: .firebaserc  .gitattributes  .gitignore  CLAUDE.md  README.md  Taskfile.yml  docker-compose.yml  firebase.json  orion.code-workspace
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 2a6589a47ac1_seed_reports_permissions.py  3187f02cbc35_seed_roles_and_permissions.py  45010fb10777_add_company_id_to_roles_for_custom_per_.py  49fde4947022_add_invites_table.py  50f7cf46097a_add_supplies.py  52d3c18cd680_imported_orders_nullable_order_client_.py  5cb243095dc7_phase1_foundations.py  6d396bf4bc50_add_billing_plans_and_subscriptions.py  7e2e990f490b_add_montador_fields.py  86d7531f48b7_add_print_technique_and_tag.py  8e95aa4674a9_add_login_attempts.py  95e36cb45a49_add_print_stock_movements_table_and_.py  99d39bfd5bc1_make_print_optional_on_products.py  a1b2c3d4e5f6_seed_founding_admin_invite.py  a1c4f7b9e2d8_sku_mappings_and_marketplace_enum.py  a8c49317fdb9_ad_products_m2m_drop_ad_product_id_.py  ad49a8465c6f_phase4_print_orders_assembly.py  b7d2c9a4e1f3_sewing_shipment_cutting_order_nullable.py  bc63b4a72462_add_cutting_run_cost.py  bd2969953622_phase3_production_wiring.py  c57941a33511_add_batches.py  dca78c0ae4b1_phase2_wip_tiers.py  (+7 more)
backend/scripts/: backfill_product_color_palette.py  bootstrap_admin.py  bootstrap_e2e_tenants.py  seed_dev.py
backend/src/: config.py  database.py  dependencies.py  firebase.py  logger.py  main.py  seed_catalog.py
backend/tests/: conftest.py  test_app.py  test_dependencies.py
(+964 files in other folders)
